[package]
authors = ["Mauricio Jost <mauriciojost@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "esp-mbed"
version = "0.1.0"

[lib]
name = "firmware"
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
